# spatial

./: .gitignore  add_hag_to_existing.ipynb  aerial.ipynb  build_ept.json  chm_calc.json  chm_stats_viz.py  copc_convert.json  count_rasters.json  dtm_dsm.json  generate_rasters.ipynb  ground_hag_pipeline.json  hello.py  many_laz.py  many_laz_sep_grnd.py  many_xyz_sep_grnd.py  metics_grouped.ipynb  metrics.ipynb  metrics.py  metrics_time.ipynb  pdal_test.py  point_density_stats.py  process_laz.ipynb  process_laz.py  pyproject.toml  set_env.cmd  smrf_test.json  spatial_lib.py  workflow.md  workplan.md  z_scratch.ipynb
z_early_dev/: append.json  build_ept.json  chm_calc.json  copc_convert.json  count_rasters.json  dtm_dsm.json  ground_hag_pipeline.json  pdal_test.py  process_laz.py  process_laz_sep_grd.py  smrf_test.json
