[project]
name = "spatial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.0",
    "geopandas>=1.0.1",
    "marimo>=0.13.13",
    "numpy>=2.2.5",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "python-lsp-server>=1.12.2",
    "rasterio>=1.4.3",
    "ruff>=0.11.12",
    "scikit-learn>=1.6.1",
    "shapely>=2.1.0",
    "sqlglot>=26.23.0",
    "statsmodels>=0.14.4",
]
